# DeepLearningBaseline

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
configs/: custom_config.yaml  example_config.yaml  mnist_test_config.yaml  mnist_train_config.yaml
core/: check_hardware.py  logger.py  utils.py
datasets/: example_dataset.py  mnist_dataset.py
docs/: config.md  guide.md  structure.md
evaluate/: example_evaluate.py  mnist_evaluate.py
function_test/: dataset_test.py
models/: custom_model.py  example_model.py  mnist_model.py
models/mnist/: mnist_model.py
models/template/: example_model.py
scripts/: clean_folders.py  clean_log.py
src/configs/mnist/: mnist_inference_config.yaml  mnist_test_config.yaml  mnist_train_config.yaml  test_code.yaml
src/datasets/: example_dataset.py  mnist_dataset.py  template_preprocess.py
src/inference/: mnist_inference.py
src/test/: mnist_test.py  template_test.py
src/train/: mnist_train.py  template_train.py
src/utils/: config_validator.py  evaluate_helper.py  train_helper.py  visualize_helper.py
src/visualize/: visualize.py
test/: mnist_test.py
train/: example_train.py  mnist_train.py
utils/: check_hardware.py  clean_project.py  evaluate_helper.py  logger.py  train_helper.py  train_utils.py  utils.py  visualize.py
